<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_2"
    android:orientation="vertical" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" 
	    android:orientation="horizontal">
	    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/btnEasyTip1"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:clickable="true"
	        android:background="@drawable/top_button_background"
	        >
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical" >
"
				<ImageView
				    android:layout_height="0dp"
				    android:layout_width="wrap_content"
				    android:layout_weight="1"
				    android:src="@drawable/easy_icon"
				    android:layout_gravity="center_horizontal"
				    />
				<TextView
				    android:layout_height="wrap_content"
				    android:layout_width="wrap_content"
				    android:text="EASY TIP"
				    android:textColor="@color/grey_1"
				    android:textSize="@dimen/font_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
			</LinearLayout>
		</FrameLayout>
	    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/btnSmartTip1"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:clickable="true"
	        android:background="@drawable/top_button_background"
	        >
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical" >

				<ImageView
				    android:layout_height="0dp"
				    android:layout_width="wrap_content"
				    android:layout_weight="1"
				    android:src="@drawable/smart_icon"
				    android:layout_gravity="center_horizontal"
				    />
				<TextView
				    android:layout_height="wrap_content"
				    android:layout_width="wrap_content"
				    android:text="SMART TIP"
				    android:textColor="@color/grey_1"
				    android:textSize="@dimen/font_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
			</LinearLayout>
		</FrameLayout>

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >
	    <LinearLayout
	        android:id="@+id/boxAmount"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:background="@color/dark_grey_2"
		    android:layout_margin="1dp"
		    android:orientation="vertical">
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    >
				<TextView 				    
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strAmount"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
				<TextView
				    android:id="@+id/txtAmountError"
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strAmountError"
				    android:textColor="@color/red"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    android:layout_marginLeft="2dp"
				    />
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="2">>
				<TextView
				    android:id="@+id/txtAmount"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="right"
				    android:text="0.98"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount" />
			</LinearLayout>
		</LinearLayout>
	    <LinearLayout
	        android:id="@+id/boxTipAmount"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:background="@color/dark_grey_2"
		    android:layout_margin="1dp"
		    android:orientation="vertical">
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    >
				<TextView 				    
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strTipAmount"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="2">
				<TextView
				    android:id="@+id/txtTipAmount"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="right"
				    android:text="0.98"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount" />
			</LinearLayout>
    	</LinearLayout>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	    <LinearLayout
	        android:id="@+id/boxTipPercent"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:background="@color/dark_grey_2"
		    android:orientation="vertical"
		    android:layout_margin="1dp"
	    >
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    >
				<TextView 				    
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strTipPercent"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="2">
				<TextView
				    android:id="@+id/txtTipPercent"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="right"
				    android:text="0.98"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount" />
			</LinearLayout>
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/boxTotalAmount"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="2"
		    android:background="@color/dark_grey_2"
		    android:orientation="vertical"
		    android:layout_margin="1dp"
	    >
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    >
				<TextView 				    
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strTotalAmount"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="2">
				<TextView
				    android:id="@+id/txtTotalAmount"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="right"
				    android:text="0.98"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount" />
			</LinearLayout>
    	</LinearLayout>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="horizontal" >

	    <LinearLayout
	        android:id="@+id/boxPeopleNum"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:background="@color/dark_grey_2"
		    android:orientation="vertical"
		    android:layout_margin="1dp"
	    >
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    >
				<TextView 				    
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strPeopleNum"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
				<TextView
				    android:id="@+id/txtPeopleNumError" 
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strPeopleNumError"
				    android:textColor="@color/red"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    android:layout_marginLeft="2dp"
				    />
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="2">
				<TextView
				    android:id="@+id/txtPeopleNum"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="right"
				    android:text="0.98"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount" />
			</LinearLayout>
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/boxAvgAmount"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="2"
		    android:background="@color/mid_grey_2"
		    android:orientation="vertical"
		    android:layout_margin="1dp"
	    >
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    >
				<TextView 				    
				    android:layout_height="match_parent"
				    android:layout_width="wrap_content"
				    android:text="@string/strAvgAmount"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount_title"
				    android:layout_gravity="center_horizontal"
				    android:layout_marginBottom="2dp"
				    />
			</LinearLayout>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="2">
				<TextView
				    android:id="@+id/txtAvgAmount"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_vertical"
				    android:gravity="right"
				    android:text="0.98"
				    android:textColor="@color/white"
				    android:textSize="@dimen/font_amount" />
			</LinearLayout>
    	</LinearLayout>
	</LinearLayout>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    >
    	<TableRow
    	    android:layout_width="wrap_content"
    	    android:layout_height="0dp"
    	    android:layout_weight="1">
		    <Button
		        android:id="@+id/btnNumOne"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="1"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumTwo"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="2"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumThree"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="3"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
    	</TableRow> 
    	<TableRow
    	    android:layout_width="wrap_content"
    	    android:layout_height="0dp"
    	    android:layout_weight="1">
		    <Button
		        android:id="@+id/btnNumFour"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="4"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumFive"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="5"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumSix"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="6"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
    	</TableRow> 
    	<TableRow
    	    android:layout_width="wrap_content"
    	    android:layout_height="0dp"
    	    android:layout_weight="1">
		    <Button
		        android:id="@+id/btnNumSeven"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="7"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumEight"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="8"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumNine"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="9"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
    	</TableRow>
    	<TableRow
    	    android:layout_width="wrap_content"
    	    android:layout_height="0dp"
    	    android:layout_weight="1">
		    <Button
		        android:id="@+id/btnDoubleZero"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="00"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnNumZero"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="0"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
		    <Button
		        android:id="@+id/btnDelete"
		        style="@style/keypadFont"
		        android:layout_height="match_parent"
		        android:layout_width="0dp"
		        android:text="DEL"
		        android:background="@drawable/keypad_button_1"
		        android:onClick="keypadListener"
		        android:layout_weight="1">
		    </Button>
    	</TableRow>     	    	    
</TableLayout>
</LinearLayout>